// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders properly 1`] = `
<div
  className="characterContainer font8Bit"
>
  <CharacterBanner
    ac={16}
    attributes={
      Array [
        Object {
          "attribute": "STR",
          "value": 10,
        },
        Object {
          "attribute": "DEX",
          "value": 10,
        },
        Object {
          "attribute": "CON",
          "value": 10,
        },
        Object {
          "attribute": "INT",
          "value": 10,
        },
        Object {
          "attribute": "WIS",
          "value": 10,
        },
        Object {
          "attribute": "CHA",
          "value": 10,
        },
      ]
    }
    battleMode={false}
    classes={
      Array [
        Object {
          "level": 1,
          "name": "Class",
        },
      ]
    }
    hp={
      Object {
        "current": 10,
        "max": 10,
      }
    }
    level={1}
    name="Character One"
    player="Player One"
    race="Race"
    shortName="One"
    xp={0}
  />
  <CharacterBanner
    ac={26}
    attributes={
      Array [
        Object {
          "attribute": "STR",
          "value": 20,
        },
        Object {
          "attribute": "DEX",
          "value": 20,
        },
        Object {
          "attribute": "CON",
          "value": 20,
        },
        Object {
          "attribute": "INT",
          "value": 20,
        },
        Object {
          "attribute": "WIS",
          "value": 20,
        },
        Object {
          "attribute": "CHA",
          "value": 20,
        },
      ]
    }
    battleMode={false}
    classes={
      Array [
        Object {
          "level": 20,
          "name": "Class",
        },
      ]
    }
    hp={
      Object {
        "current": 150,
        "max": 150,
      }
    }
    level={20}
    name="Character Two"
    player="Player Two"
    race="Race"
    shortName="Two"
    xp={999999}
  />
</div>
`;

exports[`<App /> renders properly on battle mode 1`] = `
<div
  className="battle-mode characterContainer font8Bit"
>
  <CharacterBanner
    ac={16}
    attributes={
      Array [
        Object {
          "attribute": "STR",
          "value": 10,
        },
        Object {
          "attribute": "DEX",
          "value": 10,
        },
        Object {
          "attribute": "CON",
          "value": 10,
        },
        Object {
          "attribute": "INT",
          "value": 10,
        },
        Object {
          "attribute": "WIS",
          "value": 10,
        },
        Object {
          "attribute": "CHA",
          "value": 10,
        },
      ]
    }
    battleMode={true}
    classes={
      Array [
        Object {
          "level": 1,
          "name": "Class",
        },
      ]
    }
    hp={
      Object {
        "current": 10,
        "max": 10,
      }
    }
    level={1}
    name="Character One"
    player="Player One"
    race="Race"
    shortName="One"
    xp={0}
  />
  <CharacterBanner
    ac={26}
    attributes={
      Array [
        Object {
          "attribute": "STR",
          "value": 20,
        },
        Object {
          "attribute": "DEX",
          "value": 20,
        },
        Object {
          "attribute": "CON",
          "value": 20,
        },
        Object {
          "attribute": "INT",
          "value": 20,
        },
        Object {
          "attribute": "WIS",
          "value": 20,
        },
        Object {
          "attribute": "CHA",
          "value": 20,
        },
      ]
    }
    battleMode={true}
    classes={
      Array [
        Object {
          "level": 20,
          "name": "Class",
        },
      ]
    }
    hp={
      Object {
        "current": 150,
        "max": 150,
      }
    }
    level={20}
    name="Character Two"
    player="Player Two"
    race="Race"
    shortName="Two"
    xp={999999}
  />
</div>
`;
